javaScript added with scrollBy

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <!-- header -->
         <header id="body-header">
         <nav>
-            <ul class="horizontal-list text-center nav-menu">
+            <ul class="horizontal-list text-center nav-menu ">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#experience">Experience</a></li>
+                <!-- <li><a href="#experience">Experience</a></li> -->
                 <li><a href="#education">Education</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -34,7 +34,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#experience">Experience</a></li>
+                <!-- <li><a href="#experience">Experience</a></li> -->
                 <li><a href="#education">Education</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -306,6 +306,6 @@
 
        </main>
         
-        <script src="" async defer></script>
+        <script src="./script.js" async defer></script>
     </body>
 </html>
