--- a/index.html
+++ b/index.html
@@ -83,27 +83,27 @@
             </span>
             <span>Skills</span>
                 </h1>
-                <div class="skills-display">
+                <div class="skills-display" id="skills-container">
                     <div class="skill-progress">
-                    <div class="seventy-five-percentage mb-blue"><div class="skill-name"><span>C++</span></div></div>
+                    <div class="seventy-five-percentage mb-blue" data-bar-width="75"><div class="skill-name"><span>C++</span></div></div>
                 </div>
                 <div class="skill-progress">
-                    <div class="sixty-percentage mb-green"><div class="skill-name"><span>JavaScript</span></div></div>
+                    <div class="sixty-percentage mb-green" data-bar-width="60"><div class="skill-name"><span>JavaScript</span></div></div>
                 </div>
                 <div class="skill-progress">
-                    <div class="sixty-five-percentage mb-bluevoilet"><div class="skill-name"><span>ReactJS</span></div></div>
+                    <div class="sixty-five-percentage mb-bluevoilet" data-bar-width="65"><div class="skill-name"><span>ReactJS</span></div></div>
                 </div>
                 <div class="skill-progress">
-                    <div class="forty-percentage mb-purple"><div class="skill-name"><span>NodeJS</span></div></div>
+                    <div class="forty-percentage mb-purple" data-bar-width="45"><div class="skill-name"><span>NodeJS</span></div></div>
                 </div>
                 <div class="skill-progress">
-                    <div class="eighty-five-percentage mb-orange"><div class="skill-name"><span>HTML</span></div></div>
+                    <div class="eighty-five-percentage mb-orange" data-bar-width="85"><div class="skill-name"><span>HTML</span></div></div>
                 </div>
                 <div class="skill-progress">
-                    <div class="seventy-five-percentage mb-tomato"><div class="skill-name"><span>CSS</span></div></div>
+                    <div class="seventy-five-percentage mb-tomato" data-bar-width="75"><div class="skill-name"><span>CSS</span></div></div>
                 </div>
                     <div class="skill-progress">
-                    <div class="seventy-percentage mb-teal"><div class="skill-name"><span>SQL</span></div></div>
+                    <div class="seventy-percentage mb-teal" data-bar-width="70"><div class="skill-name"><span>SQL</span></div></div>
                 </div>
                 </div>
             </section>
